// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders correctly 1`] = `
<div
  class="sc-jXbUNg bziNId"
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div />
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body"
    />
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-dcJsrY dAhqLr"
      >
        <button
          class="sc-eqUAAy fNGiZB"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-dcJsrY dAhqLr"
      >
        <button
          class="sc-eqUAAy jJvjWh"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders modal 1`] = `
<div
  class="sc-jXbUNg bziNId"
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div />
    </div>
    <div
      class="mc-dialog--body"
    />
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-dcJsrY dAhqLr"
      >
        <button
          class="sc-eqUAAy fNGiZB"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-dcJsrY dAhqLr"
      >
        <button
          class="sc-eqUAAy jJvjWh"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders with props 1`] = `
<div
  class="sc-jXbUNg cXoIGe"
  open=""
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div>
        Dialog Title
      </div>
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body"
    >
      Hello Dialog!
    </div>
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-dcJsrY dAhqLr"
      >
        <button
          class="sc-eqUAAy fNGiZB"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-dcJsrY dAhqLr"
      >
        <button
          class="sc-eqUAAy jJvjWh"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;
